수강편람 업데이트

--- a/data/htm/2013_1_basics_all.htm
+++ b/data/htm/2013_1_basics_all.htm
@@ -5308,7 +5308,7 @@
 <td class="pstyle2">월&nbsp;10,10,3-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-213&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">구연정&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5321,7 +5321,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">구연정&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5334,7 +5334,7 @@
 <td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">황승환&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5347,7 +5347,7 @@
 <td class="pstyle2">수&nbsp;9,9,4.5-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-213&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">황승환&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5360,7 +5360,7 @@
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-103&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">윤종욱&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5373,7 +5373,7 @@
 <td class="pstyle2">수&nbsp;10,10,7.5-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-213&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">윤종욱&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5386,7 +5386,7 @@
 <td class="pstyle2">화&nbsp;9,9,1.5-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-213&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">강미란&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5399,7 +5399,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">강미란&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5412,7 +5412,7 @@
 <td class="pstyle2">화&nbsp;10,10,3-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-213&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최영진&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5425,7 +5425,7 @@
 <td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최영진&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5438,7 +5438,7 @@
 <td class="pstyle2">화&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍성광&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5451,7 +5451,7 @@
 <td class="pstyle2">목&nbsp;9,9,4.5-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-213&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍성광&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5464,7 +5464,7 @@
 <td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">천미애&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5477,7 +5477,7 @@
 <td class="pstyle2">목&nbsp;10,10,6-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-213&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">천미애&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5490,7 +5490,7 @@
 <td class="pstyle2">월&nbsp;8,1.5-1.5,8&nbsp;</td>
 <td class="pstyle2">실험반2&nbsp;</td>
 <td class="pstyle2">002-423&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">윤순식&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5503,7 +5503,7 @@
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">008-304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">윤순식&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5516,7 +5516,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">양태규&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5529,7 +5529,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">양태규&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5542,7 +5542,7 @@
 <td class="pstyle2">금&nbsp;5,5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-213&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">양태규&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5594,7 +5594,7 @@
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-110B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이소영&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5607,7 +5607,7 @@
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-110B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이소영&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -6631,8 +6631,8 @@
 <td class="pstyle2">산스크리트어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">금&nbsp;8,5,6,7&nbsp;</td>
-<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">008-303&nbsp;</td>
 <td class="pstyle2">전순환&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
@@ -9429,7 +9429,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">송석희&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -9442,7 +9442,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">송석희&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -14122,7 +14122,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-120&nbsp;</td>
-<td class="pstyle2">남수경&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -14135,7 +14135,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-120&nbsp;</td>
-<td class="pstyle2">남수경&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
