--- a/data/htm/2013_1_normal_foreign.htm
+++ b/data/htm/2013_1_normal_foreign.htm
@@ -290,7 +290,7 @@
 <td class="pstyle2">¿ù&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">ÀÌ·Ð&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±èÈ«±â&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -303,7 +303,7 @@
 <td class="pstyle2">¼ö&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">ÀÌ·Ð&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±èÈ«±â&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -316,7 +316,7 @@
 <td class="pstyle2">È­&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">ÀÌ·Ð&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±è¿µ·æ&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -329,7 +329,7 @@
 <td class="pstyle2">¸ñ&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">ÀÌ·Ð&nbsp;</td>
 <td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±è¿µ·æ&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -342,7 +342,7 @@
 <td class="pstyle2">±Ý&nbsp;2,3,4&nbsp;</td>
 <td class="pstyle2">ÀÌ·Ð&nbsp;</td>
 <td class="pstyle2">006-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">ÀÌ¼÷°æ&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
