--- a/data/htm/2013_1_normal_exercise.htm
+++ b/data/htm/2013_1_normal_exercise.htm
@@ -53,9 +53,9 @@
 <td class="pstyle2">체육 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -66,9 +66,9 @@
 <td class="pstyle2">축구&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">강성민&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -79,9 +79,9 @@
 <td class="pstyle2">축구&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">강성민&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -157,7 +157,7 @@
 <td class="pstyle2">배구&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">월&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">월&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">전현수&nbsp;</td>
@@ -197,6 +197,19 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">윤혜영&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">2학년&nbsp;</td>
+<td class="pstyle2">008.006&nbsp;</td>
+<td class="pstyle2">003&nbsp;</td>
+<td class="pstyle2">양궁&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">1-0-2&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">윤혜영&nbsp;</td>
@@ -274,9 +287,9 @@
 <td class="pstyle2">야구&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -339,10 +352,10 @@
 <td class="pstyle2">에어로빅&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">김나이&nbsp;</td>
+<td class="pstyle2">김민주&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -352,10 +365,10 @@
 <td class="pstyle2">에어로빅&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">김민주&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">홍애령&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -417,9 +430,9 @@
 <td class="pstyle2">무용과 예술&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-1-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">071-212&nbsp;</td>
 <td class="pstyle2">석종관&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -511,7 +524,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">김민주&nbsp;</td>
+<td class="pstyle2">권현진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -521,9 +534,9 @@
 <td class="pstyle2">수영 2(평영)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">이정아&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -547,10 +560,10 @@
 <td class="pstyle2">수영 2(평영)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">화&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">조은효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -586,10 +599,10 @@
 <td class="pstyle2">수영 3(자유형)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">목&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">조은효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -612,9 +625,9 @@
 <td class="pstyle2">수영 4(자유형)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김한범&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -628,7 +641,7 @@
 <td class="pstyle2">금&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">맹혁주&nbsp;</td>
+<td class="pstyle2">박동욱&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -638,9 +651,9 @@
 <td class="pstyle2">수영 5(접영)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김한범&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -651,9 +664,9 @@
 <td class="pstyle2">수영 5(접영)&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김한범&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -729,9 +742,9 @@
 <td class="pstyle2">체력단련&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김준홍&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -781,9 +794,9 @@
 <td class="pstyle2">체력단련&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">신영진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -859,7 +872,7 @@
 <td class="pstyle2">테니스초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">신명진&nbsp;</td>
@@ -872,7 +885,7 @@
 <td class="pstyle2">테니스초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">목&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">신명진&nbsp;</td>
@@ -885,7 +898,7 @@
 <td class="pstyle2">테니스초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">목&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">신명진&nbsp;</td>
@@ -1028,9 +1041,9 @@
 <td class="pstyle2">테니스초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">정성한&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1210,7 +1223,7 @@
 <td class="pstyle2">골프초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">화&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">한승진&nbsp;</td>
@@ -1366,10 +1379,10 @@
 <td class="pstyle2">댄스스포츠&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">목&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실험반2&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">권현진&nbsp;</td>
+<td class="pstyle2">조은효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1392,9 +1405,9 @@
 <td class="pstyle2">댄스스포츠&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">실험반2&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김준홍&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1405,9 +1418,9 @@
 <td class="pstyle2">댄스스포츠&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">실험반2&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">박혜연&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1418,9 +1431,9 @@
 <td class="pstyle2">댄스스포츠&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실험반2&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">오화정&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1431,9 +1444,9 @@
 <td class="pstyle2">댄스스포츠&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실험반2&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">천지애&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1444,10 +1457,10 @@
 <td class="pstyle2">댄스스포츠&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">홍애령&nbsp;</td>
+<td class="pstyle2">금&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">실험반2&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">오화정&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1561,9 +1574,9 @@
 <td class="pstyle2">농구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1574,10 +1587,10 @@
 <td class="pstyle2">농구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">목&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">금&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">박동욱&nbsp;</td>
+<td class="pstyle2">맹혁주&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1613,9 +1626,9 @@
 <td class="pstyle2">배드민턴초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1652,9 +1665,9 @@
 <td class="pstyle2">배드민턴초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">전재연&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1691,9 +1704,9 @@
 <td class="pstyle2">탁구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">강성민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1704,9 +1717,9 @@
 <td class="pstyle2">탁구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1743,9 +1756,9 @@
 <td class="pstyle2">탁구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김식&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1756,9 +1769,9 @@
 <td class="pstyle2">탁구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김식&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1795,9 +1808,9 @@
 <td class="pstyle2">탁구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">서원재&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1834,9 +1847,9 @@
 <td class="pstyle2">탁구초급&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">실기&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">임강일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
