--- a/data/htm/2013_1_basics_all.htm
+++ b/data/htm/2013_1_basics_all.htm
@@ -3409,7 +3409,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-116&nbsp;</td>
+<td class="pstyle2">002-105&nbsp;</td>
 <td class="pstyle2">Abigail Joo Young Shin&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3422,7 +3422,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-116&nbsp;</td>
+<td class="pstyle2">002-105&nbsp;</td>
 <td class="pstyle2">Abigail Joo Young Shin&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4710,7 +4710,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">008-404&nbsp;</td>
-<td class="pstyle2">오은하&nbsp;</td>
+<td class="pstyle2">정혜용&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4723,7 +4723,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">008-404&nbsp;</td>
-<td class="pstyle2">오은하&nbsp;</td>
+<td class="pstyle2">정혜용&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4736,7 +4736,7 @@
 <td class="pstyle2">목&nbsp;10,10&nbsp;</td>
 <td class="pstyle2">실험반2&nbsp;</td>
 <td class="pstyle2">007-110B&nbsp;</td>
-<td class="pstyle2">오은하&nbsp;</td>
+<td class="pstyle2">정혜용&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -7686,7 +7686,7 @@
 <td class="pstyle2">3-3-1&nbsp;</td>
 <td class="pstyle2">월&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-105&nbsp;</td>
+<td class="pstyle2">003-109&nbsp;</td>
 <td class="pstyle2">오르트나상&nbsp;</td>
 <td class="pstyle2">12&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -7699,7 +7699,7 @@
 <td class="pstyle2">3-3-1&nbsp;</td>
 <td class="pstyle2">수&nbsp;6&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
-<td class="pstyle2">003-105&nbsp;</td>
+<td class="pstyle2">007-111B&nbsp;</td>
 <td class="pstyle2">오르트나상&nbsp;</td>
 <td class="pstyle2">12&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -11795,7 +11795,7 @@
 <td class="pstyle2">월&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-301&nbsp;</td>
-<td class="pstyle2">석차옥&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11808,7 +11808,7 @@
 <td class="pstyle2">수&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-301&nbsp;</td>
-<td class="pstyle2">석차옥&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11821,7 +11821,7 @@
 <td class="pstyle2">금&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-301&nbsp;</td>
-<td class="pstyle2">석차옥&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11834,7 +11834,7 @@
 <td class="pstyle2">월&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">이연&nbsp;</td>
+<td class="pstyle2">박승범&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11847,7 +11847,7 @@
 <td class="pstyle2">수&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">이연&nbsp;</td>
+<td class="pstyle2">박승범&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11860,7 +11860,7 @@
 <td class="pstyle2">금&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">이연&nbsp;</td>
+<td class="pstyle2">박승범&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11873,7 +11873,7 @@
 <td class="pstyle2">월&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-101&nbsp;</td>
-<td class="pstyle2">정영근&nbsp;</td>
+<td class="pstyle2">이연&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11886,7 +11886,7 @@
 <td class="pstyle2">수&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-101&nbsp;</td>
-<td class="pstyle2">정영근&nbsp;</td>
+<td class="pstyle2">이연&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11899,7 +11899,7 @@
 <td class="pstyle2">금&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-101&nbsp;</td>
-<td class="pstyle2">정영근&nbsp;</td>
+<td class="pstyle2">이연&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11951,7 +11951,7 @@
 <td class="pstyle2">월&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">이연&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11964,7 +11964,7 @@
 <td class="pstyle2">수&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">이연&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -11977,7 +11977,7 @@
 <td class="pstyle2">금&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">이연&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -12029,7 +12029,7 @@
 <td class="pstyle2">월&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">박승범&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -12042,7 +12042,7 @@
 <td class="pstyle2">수&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">박승범&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -12055,7 +12055,7 @@
 <td class="pstyle2">금&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-401&nbsp;</td>
-<td class="pstyle2">박승범&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -12068,7 +12068,7 @@
 <td class="pstyle2">월&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정영근&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -12081,7 +12081,7 @@
 <td class="pstyle2">수&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정영근&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -12094,7 +12094,7 @@
 <td class="pstyle2">금&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정영근&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
