--- a/data/htm/2013_1_basics_foreign.htm
+++ b/data/htm/2013_1_basics_foreign.htm
@@ -1589,7 +1589,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-116&nbsp;</td>
+<td class="pstyle2">002-105&nbsp;</td>
 <td class="pstyle2">Abigail Joo Young Shin&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1602,7 +1602,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-116&nbsp;</td>
+<td class="pstyle2">002-105&nbsp;</td>
 <td class="pstyle2">Abigail Joo Young Shin&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2890,7 +2890,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">008-404&nbsp;</td>
-<td class="pstyle2">오은하&nbsp;</td>
+<td class="pstyle2">정혜용&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2903,7 +2903,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">008-404&nbsp;</td>
-<td class="pstyle2">오은하&nbsp;</td>
+<td class="pstyle2">정혜용&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2916,7 +2916,7 @@
 <td class="pstyle2">목&nbsp;10,10&nbsp;</td>
 <td class="pstyle2">실험반2&nbsp;</td>
 <td class="pstyle2">007-110B&nbsp;</td>
-<td class="pstyle2">오은하&nbsp;</td>
+<td class="pstyle2">정혜용&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4969,7 +4969,7 @@
 <td class="pstyle2">3-3-1&nbsp;</td>
 <td class="pstyle2">월&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-105&nbsp;</td>
+<td class="pstyle2">003-109&nbsp;</td>
 <td class="pstyle2">오르트나상&nbsp;</td>
 <td class="pstyle2">12&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4982,7 +4982,7 @@
 <td class="pstyle2">3-3-1&nbsp;</td>
 <td class="pstyle2">수&nbsp;6&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
-<td class="pstyle2">003-105&nbsp;</td>
+<td class="pstyle2">007-111B&nbsp;</td>
 <td class="pstyle2">오르트나상&nbsp;</td>
 <td class="pstyle2">12&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
