--- a/data/htm/2013_1_normal_history.htm
+++ b/data/htm/2013_1_normal_history.htm
@@ -810,7 +810,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-402&nbsp;</td>
-<td class="pstyle2">박재욱&nbsp;</td>
+<td class="pstyle2">박흥식&nbsp;</td>
 <td class="pstyle2">72&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -823,7 +823,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-402&nbsp;</td>
-<td class="pstyle2">박재욱&nbsp;</td>
+<td class="pstyle2">박흥식&nbsp;</td>
 <td class="pstyle2">72&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -992,7 +992,7 @@
 <td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-404&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박재욱&nbsp;</td>
 <td class="pstyle2">72&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1005,7 +1005,7 @@
 <td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-404&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박재욱&nbsp;</td>
 <td class="pstyle2">72&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
