--- a/data/htm/2013_1_core_society.htm
+++ b/data/htm/2013_1_core_society.htm
@@ -404,9 +404,9 @@
 <td class="pstyle2">여성과 법&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-604&nbsp;</td>
+<td class="pstyle2">017-108&nbsp;</td>
 <td class="pstyle2">양현아&nbsp;</td>
 <td class="pstyle2">12&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -417,9 +417,9 @@
 <td class="pstyle2">여성과 법&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-604&nbsp;</td>
+<td class="pstyle2">017-108&nbsp;</td>
 <td class="pstyle2">양현아&nbsp;</td>
 <td class="pstyle2">12&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
