--- a/data/htm/2013_1_normal_history.htm
+++ b/data/htm/2013_1_normal_history.htm
@@ -1161,7 +1161,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박수현&nbsp;</td>
 <td class="pstyle2">54&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
